// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel should render & hover if optional 1`] = `
<DocumentFragment>
  <label
    class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
    data-testid="FormLabel"
  >
    Test
    <div
      class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
      data-testid="FormLabel__required"
    />
    <span
      class="ml-1 text-theme-neutral-light"
      data-testid="FormLabel__optional"
    >
      (optional)
    </span>
  </label>
</DocumentFragment>
`;

exports[`FormLabel should render & hover if required 1`] = `
<DocumentFragment>
  <label
    class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
    data-testid="FormLabel"
  >
    Test
    <div
      class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
      data-testid="FormLabel__required"
    />
  </label>
</DocumentFragment>
`;

exports[`FormLabel should render with name from context 1`] = `
<DocumentFragment>
  <label
    class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
    data-testid="FormLabel"
    for="test"
  >
    Test Label
    <div
      class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
      data-testid="FormLabel__required"
    />
  </label>
</DocumentFragment>
`;
